--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "node-sass": "4.11.0",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
+    "react-loader-spinner": "^2.3.0",
+    "react-paginate": "6.3.0",
+    "react-router": "3.2.0",
+    "react-scripts": "2.1.5",
+    "react-toastify": "4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
