--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "react-dom": "16.8.3",
     "react-loader-spinner": "^2.3.0",
     "react-paginate": "6.3.0",
+    "react-responsive-modal": "^3.6.0",
     "react-router": "3.2.0",
     "react-scripts": "2.1.5",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "4.1.0"
   },
   "scripts": {
